--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "doctrine/cache": "^2.2",
         "symfony/cache": "^6.0",
         "doctrine/annotations": "^2.0",
-        "monolog/monolog": "^2.9"
+        "monolog/monolog": "^2.9",
+        "william-costa/dot-env": "^0.1.0"
     },
     "require-dev": {
         "php-debug/debugger": "^0.1.0"
