Atualizado as informações de conexão do db(.env)

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 URL=http://localhost/contatos-php
 DB_HOST=localhost
 DB_NAME=contatos_php
-DB_USER=root
+DB_USER=postgres
 DB_PASS=aluno
 DB_PORT=5432
+DB_DRIV=pdo_pgsql
